--- a/Text.css
+++ b/Text.css
@@ -6,4 +6,30 @@ P
 {
 	font-family: Courier;
 	font-size: 16px;
+}
 
+img {
+	display: block;
+	margin: auto;
+	width: 10% 
+}
+
+.redFont
+{
+	color:red;
+}
+
+.redFont1
+{
+	color:red;
+}
+
+span.crosshair {
+    cursor: crosshair;
+}
+
+div.relative {
+    position: relative;
+    
+    
+}
