new changes to Website

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,7 @@
-nav>
+<nav>
 	  <ul>
 	    <li>
-		  <a href={{site.linkedin>LinkedIn</a>
+		  <a href={{site.linkedin}}>LinkedIn</a>
 	    </li>
 	  </ul>
 
@@ -13,3 +13,5 @@ nav>
 	</nav>
 
 	<footer>&copy; Anders Friis 2016</footer>
+</body>
+</html>
