--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,7 +3,7 @@
 
 <head>
 	<title>Anders Friis</title>
-    <link rel="stylesheet" type="text/css" href="Text.css">
+    <link rel="stylesheet" type="text/css" href="/css/style.css" />
 </head>
 
 <body>
